--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-lagou",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "lagou eslint rule",
   "main": "index.js",
   "scripts": {
@@ -9,14 +9,16 @@
   "author": "Tomwang",
   "license": "ISC",
   "dependencies": {
-    "eslint": "^5.12.1",
-    "eslint-plugin-react": "^7.12.4",
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.15.0",
     "eslint-config-airbnb-base": "^11.3.0",
+    "eslint-config-react-app": "^3.0.7",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-vue": "^5.2.1"
   }
 }
